more heap, less nodes